# our_notes

./: .gitignore
our_notes_client/: CMakeLists.txt  CustomButton.qml  ListNotesForm.qml  LoginForm.qml  ManageNote.qml  NoteItem.qml  client.cpp  client.h  globalparameters.cpp  globalparameters.h  login.cpp  login.h  main.cpp  main.qml  notemanager.cpp  notemanager.h  noteslistmodel.cpp  noteslistmodel.h  workwithdb.cpp  workwithdb.h
our_notes_server/database/: docker-compose.yml
our_notes_server/our_notes_server/: CMakeLists.txt  main.cpp  server.cpp  server.h
